--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "U+",
   "license": "MIT",
   "scripts": {
+    "backup:db": "cd bin && ./backup_db.sh && cd ../",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
+    "prepare": "cd bin && ./install.sh && cd ../",
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
@@ -25,7 +27,9 @@
     "axios": "^0.18.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^4.43.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.1.0",
@@ -33,6 +37,8 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.12.10",
     "@types/supertest": "^2.0.5",
+    "dotenv": "^7.0.0",
+    "fs": "0.0.1-security",
     "jest": "^23.5.0",
     "nodemon": "^1.18.6",
     "prettier": "^1.14.2",
