--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "axios": "^0.18.0",
+    "dotenv": "^7.0.0",
+    "fs": "0.0.1-security",
+    "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
-    "typescript": "^3.0.1",
-    "mysql2": "^1.6.5",
-    "sequelize": "^4.43.0"
+    "sequelize": "^4.43.0",
+    "typescript": "^3.0.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.1.0",
@@ -37,8 +39,6 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.12.10",
     "@types/supertest": "^2.0.5",
-    "dotenv": "^7.0.0",
-    "fs": "0.0.1-security",
     "jest": "^23.5.0",
     "nodemon": "^1.18.6",
     "prettier": "^1.14.2",
