--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "dependencies": {
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
+    "@nestjs/passport": "^6.0.0",
     "axios": "^0.18.0",
     "dotenv": "^7.0.0",
     "fs": "0.0.1-security",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "sequelize": "^4.43.0",
